GBL-3371 / TSK-8783 -- API КЭДО

--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -18,6 +18,7 @@ include::partial$bo-digital-signature.adoc[]
 include::partial$bo-om-mapping.adoc[]
 include::partial$bo-om-services-entities.adoc[]
 include::partial$bo-om-services.adoc[]
+include::partial$bo-om-services-kedo.adoc[]
 include::partial$bo-om-services-barcode.adoc[]
 include::partial$bo-om-services-basecard.adoc[]
 include::partial$bo-om-services-baseuniversal.adoc[]
