ERR-7675 / GBL-3673 -- devexpress в исходящих документах и API

--- a/modules/BackOffice-WinForms/pages/CardFrameForm_CL.adoc
+++ b/modules/BackOffice-WinForms/pages/CardFrameForm_CL.adoc
@@ -5,12 +5,12 @@
 * *Пространство имён:* `xref:WinForms_NS.adoc[DocsVision.BackOffice.WinForms]`
 * *Сборка:* `DocsVision.BackOffice.WinForms.dll`
 
-== Синтаксис
-
-[source,csharp]
-----
-public partial class CardFrameForm : DevExpress.XtraEditors.XtraForm, ICardFrameWindow
-----
+// == Синтаксис
+//
+// [source,csharp]
+// ----
+// public partial class CardFrameForm : DevExpress.XtraEditors.XtraForm, ICardFrameWindow
+// ----
 
 == Конструкторы
 
