--- a/modules/BackOffice-WinForms/pages/WinForms_NS.adoc
+++ b/modules/BackOffice-WinForms/pages/WinForms_NS.adoc
@@ -28,10 +28,10 @@
 |`CardDigestEventArgs` |Предоставляет данные для события генерации дайджеста.
 |`xref:CardFrameForm_CL.adoc[CardFrameForm]` |Предоставляет доступ к данным окна карточки.
 |`CardSavingEventArgs` |Содержит аргументы для события сохранения данных карточки.
-|`EditorLocalizer` |Предоставляет локализованные названия для некоторых элементов управления DevExpress.
+|`EditorLocalizer` |Предоставляет локализованные названия для некоторых элементов управления.
 |`FlexibleCollection` |Предоставляет коллекцию основанную на `System.Collections.Generic.List` с кэшем.
 |`FlexibleReadOnlyCollection` |Вариант коллекции FlexibleCollection в режиме чтения.
-|`GridLocalizer` |Предоставляет локализованные названия для элементов таблицы DevExpress.
+|`GridLocalizer` |Предоставляет локализованные названия для элементов таблицы.
 |`KeyValueItem` |Определяет пару "ключ-значение".
 |`ObjectContextEventArgs` |Содержит аргументы события инициализации контекста объектов.
 |`RibbonPagesEventArgs` |Содержит аргументы для события получения методом `GetRibbonPages` массива `RibbonPage`.
