--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignatures_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.AddSignatures_MT.adoc
@@ -40,72 +40,72 @@ signedCms:::
 
 Данный метод может быть использован для импорта подписанного файла, сохранённого в виде сообщения CMS/PKCS 7, в карточку. {dv} экспортирует подписанные файлы в один файл с расширением `.p7s`, либо в два файла: экспортируемый файл и отдельно сообщение CMS/PKCS 7 в виде файла с расширением `.p7s`. Для извлечения исходного файла из сообщения предназначен метод `xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.DecodeSignedDocument_MT.adoc[IDocumentService.DecodeSignedDocument]`.
 
-== Примеры
-
-Ниже приведён пример использования метода `AddSignatures` в скрипте карточки. В данном примере выполняется импорт основного файла, экспортированного с отсоединенной подписью из карточки. Файл и подпись хранятся в одном каталоге и имеют идентичные названия (у криптографического сообщения добавлено расширение `.p7s`).
-
-[source,csharp]
-----
-using System.Security.Cryptography;
-using System.Security.Cryptography.Pkcs;
-using System.Windows.Forms;
-using System.Windows.Forms.Design;
-
-using DocsVision.BackOffice.ObjectModel;
-using DocsVision.BackOffice.ObjectModel.Services;
-using DocsVision.Platform.ObjectModel;
-
-namespace BackOffice
-{
- public class CardDocumentПримерScript : CardDocumentДокументУДScript
- {
-  private void importMainFile_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
-  {
-   Document document = (base.BaseObject as Document);
-   ObjectContext objectContext = base.CardControl.ObjectContext;
-      
-   IDocumentService documentService = objectContext.GetService<IDocumentService>();
-   IUIService uiService = objectContext.GetService<IUIService>(); <.>
-
-   OpenFileDialog openFileDialog = new OpenFileDialog();
-   openFileDialog.Multiselect = false;
-   openFileDialog.Filter = "Все файлы (*.*)|*.*";
-   DialogResult result = openFileDialog.ShowDialog();
-   if (result != DialogResult.OK) return; <.>
-   
-   string fileName = openFileDialog.FileName;
-   string p7sFileName = fileName + ".p7s"; <.>
-   
-   if (!System.IO.File.Exists(p7sFileName)) return; <.>
-
-   DocumentFile mainFile = documentService.AttachMainFile(document, fileName); <.>
-
-   SignedCms signedCms;
-   
-   documentService.DecodeSignedDocument(p7sFileName, document, out signedCms); <.>
-
-   try
-   {
-    signedCms.CheckSignature(false);
-   } catch (CryptographicException)
-   {
-    documentService.RemoveMainFile(document, mainFile);
-    uiService.ShowError("ЭП недействительна");
-    return; <.>
-   }
-   
-   documentService.AddSignatures(document, signedCms); <.>
-  }
- }
-}
-----
-<.> Получение необходимых сервисов.
-<.> Выбор файла для импорта. Предполагается выбор только импортируемого файла, криптографическое сообщение будет загружено автоматически.
-<.> Получение имён файла и сообщения.
-<.> Не подписанные файлы не загружаются.
-<.> Предварительная загрузка основного файла. Необходима для корректной проверки подписи.
-<.> Выгрузка сообщения CMS/PKCS 7 из файла.
-<.> Проверка действительности подписи и сертификата. В случае недействительности загруженный ранее файл будет удалён.
-<.> Подписание документа.
-
-К скрипту карточки требуется добавить сборку `System.Security.dll`.
+// == Примеры
+//
+// Ниже приведён пример использования метода `AddSignatures` в скрипте карточки. В данном примере выполняется импорт основного файла, экспортированного с отсоединенной подписью из карточки. Файл и подпись хранятся в одном каталоге и имеют идентичные названия (у криптографического сообщения добавлено расширение `.p7s`).
+//
+// [source,csharp]
+// ----
+// using System.Security.Cryptography;
+// using System.Security.Cryptography.Pkcs;
+// using System.Windows.Forms;
+// using System.Windows.Forms.Design;
+//
+// using DocsVision.BackOffice.ObjectModel;
+// using DocsVision.BackOffice.ObjectModel.Services;
+// using DocsVision.Platform.ObjectModel;
+//
+// namespace BackOffice
+// {
+//  public class CardDocumentПримерScript : CardDocumentДокументУДScript
+//  {
+//   private void importMainFile_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
+//   {
+//    Document document = (base.BaseObject as Document);
+//    ObjectContext objectContext = base.CardControl.ObjectContext;
+//
+//    IDocumentService documentService = objectContext.GetService<IDocumentService>();
+//    IUIService uiService = objectContext.GetService<IUIService>(); <.>
+//
+//    OpenFileDialog openFileDialog = new OpenFileDialog();
+//    openFileDialog.Multiselect = false;
+//    openFileDialog.Filter = "Все файлы (*.*)|*.*";
+//    DialogResult result = openFileDialog.ShowDialog();
+//    if (result != DialogResult.OK) return; <.>
+//
+//    string fileName = openFileDialog.FileName;
+//    string p7sFileName = fileName + ".p7s"; <.>
+//
+//    if (!System.IO.File.Exists(p7sFileName)) return; <.>
+//
+//    DocumentFile mainFile = documentService.AttachMainFile(document, fileName); <.>
+//
+//    SignedCms signedCms;
+//
+//    documentService.DecodeSignedDocument(p7sFileName, document, out signedCms); <.>
+//
+//    try
+//    {
+//     signedCms.CheckSignature(false);
+//    } catch (CryptographicException)
+//    {
+//     documentService.RemoveMainFile(document, mainFile);
+//     uiService.ShowError("ЭП недействительна");
+//     return; <.>
+//    }
+//
+//    documentService.AddSignatures(document, signedCms); <.>
+//   }
+//  }
+// }
+// ----
+// <.> Получение необходимых сервисов.
+// <.> Выбор файла для импорта. Предполагается выбор только импортируемого файла, криптографическое сообщение будет загружено автоматически.
+// <.> Получение имён файла и сообщения.
+// <.> Не подписанные файлы не загружаются.
+// <.> Предварительная загрузка основного файла. Необходима для корректной проверки подписи.
+// <.> Выгрузка сообщения CMS/PKCS 7 из файла.
+// <.> Проверка действительности подписи и сертификата. В случае недействительности загруженный ранее файл будет удалён.
+// <.> Подписание документа.
+//
+// К скрипту карточки требуется добавить сборку `System.Security.dll`.
