ERR-7676 / GBL-3673 -- опечатки в тексте

--- a/modules/samples/pages/components/properties-page.adoc
+++ b/modules/samples/pages/components/properties-page.adoc
@@ -90,7 +90,7 @@ public partial class Extension : NavExtension
 +
 [NOTE]
 ====
-При реализации на компонентах WinForms нужно наследовать (см. комментарий выше) от класса `DocsVision.Platform.WinForms.NavExtension`, реализованного в сборке `DocsVision.Platform.WinForms.dll`)
+При реализации на компонентах WinForms нужно наследовать (см. комментарий выше) от класса `DocsVision.Platform.WinForms.NavExtension`, реализованного в сборке `DocsVision.Platform.WinForms.dll`.
 ====
 +
 . Реализуем в классе `Extension` функциональность расширения, добавляющего страницы в свойства карточки.
