--- a/modules/solutions/pages/cards/card-component/controls.adoc
+++ b/modules/solutions/pages/cards/card-component/controls.adoc
@@ -17,7 +17,7 @@
 .К этой группе относятся:
 ** `SessionSource` -- соединение с сервером {dv}.
 ** `CardDataSource` -- набор данных карточек.
-** `RowDataSource` -- набор строксекции карточки.
+** `RowDataSource` -- набор строк секции карточки.
 ** `InfoRowDataSource` -- данные представления.
 ** `ReportDataSource` -- данные хранимой процедуры.
 +
@@ -64,8 +64,8 @@ WARNING: В текущей версии системы интеграция с {
 +
 * Дополнительные элементы *выбора данных*:
 +
-** `FileSystemFileBox` -- элемент выбора файла с файловой системы.
-** `FolderChooseBox` -- элемент выбора папки с файловой системы.
+** `FileSystemFileBox` -- элемент выбора файла из файловой системы.
+** `FolderChooseBox` -- элемент выбора папки из файловой системы.
 +
 * *Вспомогательные*:
 +
