--- a/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
+++ b/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
@@ -49,7 +49,7 @@ public sealed partial class TestCard : CardControl
 * `ShortcutID` -- идентификатор ярлыка, из которого открыта карточка.
 * `ModeID` -- идентификатор текущего режима карточки.
 
-Таким, готовый код компонента карточки может выглядеть следующим образом (такая карточка будет создаваться и активироваться, но не несет в себе никакой полезной функциональности):
+Готовый код компонента карточки может выглядеть следующим образом (такая карточка будет создаваться и активироваться, но не несет в себе никакой полезной функциональности):
 
 [source,csharp]
 ----
