ERR-7736 -- пропущена запятая

--- a/modules/cards/pages/use-reports.adoc
+++ b/modules/cards/pages/use-reports.adoc
@@ -4,7 +4,7 @@
 
 [WARNING]
 ====
-Отчёт работает с данными минуя модели безопасности {dv}, поэтому задача обеспечения защиты данных, в данном случае, возлагается на разработчика.
+Отчёт работает с данными, минуя модели безопасности {dv}, поэтому задача обеспечения защиты данных, в данном случае, возлагается на разработчика.
 
 Создание отчётов требует от разработчика понимания внутреннего устройства БД {dv}.
 ====
