--- a/modules/cards/pages/use-reports.adoc
+++ b/modules/cards/pages/use-reports.adoc
@@ -46,7 +46,7 @@ CardLib
    |  MyProcedure1.sql
 ----
 
-Регистрация отчёта в схеме библиотеки карточек выполняется с помощью программы "CardManager". Инструкция по работе с программой приведена в Руководстве пользователя {rk}.
+Регистрация отчёта в схеме библиотеки карточек выполняется с помощью программы "CardManager". Инструкция по работе с программой приведена в Руководстве пользователя {rk}, см в центре загрузок {dv}.
 
 В качестве примера далее будет выполнена регистрация отчёта `GetLogMessages`, возвращающего записи из журнала {dv} за определённый период:
 
