TSK-9074 / SUP-11337 -- IIS в документации 6.1

--- a/modules/solutions/pages/extensions/console-plugin.adoc
+++ b/modules/solutions/pages/extensions/console-plugin.adoc
@@ -5,7 +5,7 @@
 .Такими действиями, в частности, могут являться:
 * Работа с базой данных.
 * Установка или конфигурирование NT-сервисов.
-* Создание Web-сайтов или виртуальных папок в IIS.
+// * Создание Web-сайтов или виртуальных папок в IIS.
 * Взаимодействие с другими компонентами или решениями.
 * Изменение параметров работы решения после окончания установки.
 * Прочие действия.
