ERR-7795 -- неверные подписи к картинке

--- a/modules/samples/pages/components/resources-movement-card.adoc
+++ b/modules/samples/pages/components/resources-movement-card.adoc
@@ -97,10 +97,10 @@ image::ROOT:description-field.png[Добавление поля "Description"]
 .Карточка в справочнике видов карточек
 image::ROOT:card-in-kinds-dir.png[Карточка в справочнике видов карточек]
 +
-. В _Конструкторе разметок_ определите минимум одно состояние, которое будет являться начальным, а также установите доступность операций редактирования.
+. В _Конструкторе состояний_ определите минимум одно состояние, которое будет являться начальным, а также установите доступность операций редактирования.
 +
-.Карточка в конструкторе разметок
-image::ROOT:card-in-layouts-des.png[Карточка в Конструкторе разметок]
+.Карточка в конструкторе состояний
+image::ROOT:card-in-layouts-des.png[Карточка в Конструкторе состояний]
 +
 . В _Конструкторе ролей_ определите роль для карточки (например, Все).
 +
